# moive-dss

./: dashboard.py  dashboard_default.py  dashboard_no_popularity.py  nlp_training.ipynb  pyproject.toml  requirements.txt  xgboost.ipynb  xgboost_box_office_model.json  xgboost_box_office_model_without_popularity.json  xgboost_old.ipynb  xgboost_training.ipynb  xgboost_without_popularity.ipynb
dataset/: genres_name.npy
example/: all.py  handle-dataset1.py  historical-average-mean.py  imsdb-script-analysis.py  linear-regression.py  risk-assessment.py  script-analysis.py  tmdb-linear.py  trend.py
example/complete_xgboost/: dashboard.py  main.py  model.py
example/steamlit/: dashboard.py
models/: fast_genre_head.pkl  xgboost_box_office_model.json  xgboost_box_office_model_nlp_version.json  xgboost_box_office_model_without_popularity.json
