[project]
name = "movie-dss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyter-lsp>=2.3.0",
    "jupyterlab-lsp>=5.2.0",
    "jupyterlab-server>=2.28.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "python-lsp-server>=1.14.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "tensorflow>=2.21.0",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "transformers[tf,tokenizers,torch]>=5.3.0",
    "xgboost>=3.2.0",
]
